--- a/WCBuild/css/main.css
+++ b/WCBuild/css/main.css
@@ -83,7 +83,7 @@ article p {
   width: 150px;
   height: 150px;
   
-  background-image: url('../images/marvelSprites.jpg');
+  background-image: url('../images/world_cup.jpg');
 }
 
 #France { background-position: -150px 0; }
