--- a/WCBuild/css/main.css
+++ b/WCBuild/css/main.css
@@ -129,7 +129,7 @@ footer {
   display: none;
 }
 
-#lightbox2 { background-image: url('../images/Thor_LB_Bg.png'); }
+#lightbox2 { background-image: url('../images/Flag_of_Canada.svg.webp'); }
 
 .lightbox_close {
   position: relative;
