--- a/WCBuild/css/main.css
+++ b/WCBuild/css/main.css
@@ -120,7 +120,7 @@ footer {
   left: 0;
 
   background-color: rgba(0, 0, 0, 0.85);
-  background-image: url('../images/Cap_LB_Bg.png');
+  background-image: url('../images/usa_flag.jpeg');
   background-repeat: no-repeat;
 
   background-size: 55vh; /* 55% of the viewport height */
